--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Singe Price Grid Component Master</title>
+  <link rel="stylesheet" href="/single-price-grid-component-master/stylesheet.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="shortcut icon" href="/single-price-grid-component-master/images/favicon-32x32.png" type="image/x-icon" />
 </head>
+
 <body>
-  Join our community
+  <div id="section">
+    <div class="field">
+      <h1>Join our community</h1>
+      <p style="color: hsl(71, 73%, 54%)">
+        30-day, hassle-free money back guarantee
+      </p>
+      <p style="color: hsl(204, 43%, 93%)">
+        Gain access to our full library of tutorials along with expert code
+        reviews<br />
+        Perfect for any developers who are serious about honing their skills
+      </p>
+    </div>
+    <div class="text1">
+      <div class="text1a">
+        <p>
+          Monthly Subscription<br />
+        <div class="number">
+          <p style="font-size:30px"> $29 </p>
+          <p style="color: hsl(204, 43%, 93%);"> per month</p>
+        </div>
+        Full access for less than $1 a day
+        </p>
 
-  30-day, hassle-free money back guarantee
+        <button type="button"> sign up</button>
+      </div>
 
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
+      <div class="text1b">
+        <h2>Why Us</h2>
 
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+        <p style="color: hsl(204, 43%, 93%);">tutorials by industry experts<br />Peer & expert code review<br />Coding
+          exercises<br />Access to our GitHub repos<br />community forum<br />Flashcard
+          decks<br />New videos every week
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
